--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,40 +1,34 @@
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8"><form class="mt-5" [formGroup]="loginForm" (ngSubmit)="onSubmit()"> 
+  
+      <!-- Username input -->
+      <div class="form-outline mb-4">
+        <label class="form-label" for="form2Example1">Username</label>
+        <input type="text" id="username" formControlName="username" class="form-control" placeholder="Type your Username" />
+        
+      </div>
+    
+      <!-- Password input -->
+      <div class="form-outline mb-4">
+        <label class="form-label" for="form2Example2" >Password</label>
+        <input type="password" id="password" formControlName="password"  class="form-control" placeholder="Type your password" />
+        
+      </div>
+    
+      
+      
+      <!-- Submit button -->
+      <button type="submit" class="btn btn-primary btn-block mb-4"> Sign in </button>
+    
+      <!-- Register buttons -->
+      <div class="text-center">
+        <p>Not a member? <a routerLink="/register">Register</a></p>
+        
+        
+      </div>
+    </form>
+    </div>
+    <div class="col-md-2"></div>
+  </div>
 
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()"> 
-    <!-- Username input -->
-    <div class="form-outline mb-4">
-      <input type="text" id="username" formControlName="username" class="form-control" />
-      <label class="form-label" for="form2Example1">Username</label>
-    </div>
-  
-    <!-- Password input -->
-    <div class="form-outline mb-4">
-      <input type="password" id="password" formControlName="password"  class="form-control" />
-      <label class="form-label" for="form2Example2">Password</label>
-    </div>
-  
-    
-    
-    <!-- Submit button -->
-    <button type="submit" class="btn btn-primary btn-block mb-4"> Sign in </button>
-  
-    <!-- Register buttons -->
-    <div class="text-center">
-      <p>Not a member? <a href="#!">Register</a></p>
-      <p>or sign up with:</p>
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-facebook-f"></i>
-      </button>
-  
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-google"></i>
-      </button>
-  
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-twitter"></i>
-      </button>
-  
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-github"></i>
-      </button>
-    </div>
-  </form>
