--- a/src/app/register-form/register-form.component.html
+++ b/src/app/register-form/register-form.component.html
@@ -1,5 +1,5 @@
-<section class="vh-100 bg-image"
-  style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
+<div >
+  <section>
   <div class="mask d-flex align-items-center h-100 gradient-custom-3">
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
@@ -11,23 +11,23 @@
               <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
 
                 <div class="form-outline mb-4">
-                  <input type="text" id="firstName" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example1cg" formControlName="firstName">Your First Name</label>
+                  <input type="text" id="firstName" class="form-control form-control-lg" formControlName="firstName" />
+                  <label class="form-label" for="form3Example1cg" >Your First Name</label>
                 </div>
 
                 <div class="form-outline mb-4">
-                  <input type="text" id="lastName" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example3cg" formControlName="lastName">Your Last name </label>
+                  <input type="text" id="lastName" class="form-control form-control-lg" formControlName="lastName"/>
+                  <label class="form-label" for="form3Example3cg" >Your Last name </label>
                 </div>
 
                 <div class="form-outline mb-4">
-                    <input type="text" id="username" class="form-control form-control-lg" />
-                    <label class="form-label" for="form3Example3cg" formControlName="username">Your Username </label>
+                    <input type="text" id="username" class="form-control form-control-lg"formControlName="username" />
+                    <label class="form-label" for="form3Example3cg" >Your Username </label>
                   </div>
 
                 <div class="form-outline mb-4">
-                  <input type="password" id="password" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cg" formControlName="password">Password</label>
+                  <input type="password" id="password" class="form-control form-control-lg" formControlName="password"/>
+                  <label class="form-label" for="form3Example4cg" >Password</label>
                 </div>
 
                 
@@ -56,4 +56,5 @@
     </div>
   </div>
 </section>
+</div>
 <router-outlet></router-outlet>
